// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PitchedRoofCalculator Protrusions component adds a protrusion 1`] = `
[
  [
    {
      "protrusions": [],
    },
    {
      "protrusions": undefined,
    },
  ],
  [
    {
      "protrusions": [
        {},
      ],
    },
    {
      "protrusions": undefined,
    },
  ],
  [
    {
      "protrusions": [
        {
          "type": undefined,
        },
      ],
    },
    {
      "protrusions": "There is an error",
    },
  ],
]
`;

exports[`PitchedRoofCalculator Protrusions component removes a protrusion 1`] = `
[
  [
    {
      "protrusions": [
        {
          "A": "33",
          "B": "55",
          "P": "44",
          "type": "protrusion01",
        },
      ],
    },
    {
      "protrusions": undefined,
    },
  ],
  [
    {
      "protrusions": [
        {
          "A": "33",
          "B": "55",
          "P": "44",
          "type": "protrusion01",
        },
      ],
    },
    {
      "protrusions": undefined,
    },
  ],
  [
    {
      "protrusions": [],
    },
    {
      "protrusions": undefined,
    },
  ],
]
`;

exports[`PitchedRoofCalculator Protrusions component renders correctly 1`] = `
<div>
  <div
    class="Protrusions"
  >
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6  css-1nuwz6u-MuiTypography-root"
          data-testid="typography"
        >
          Are there any protrusions?
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Add protrusions
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
